fix twoslash overflow once and for all

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -42,7 +42,15 @@ header {
 
 pre:not(.twoslash),
 .twoslash .twoslash-popup-code {
-  max-width: 100vw;
+  /*
+    codeblock padding - 15px
+    twoslash padding - 8px * 2
+    border - 2px
+    total - 33px
+
+    minimum body margin - 8px
+  */
+  max-width: calc(100vw - max((100vw - 900px) / 2, 8px) - 33px);
   overflow-x: auto;
 }
 
